# rag-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  config.py  es_client.py  ingest.py  logging_conf.py  main.py  rag.py  schemas.py  utils.py
src/llm_providers/: __init__.py  base.py  factory.py  fallback.py  providers.py
streamlit_app/: app.py
